Fix T89327: Cube and ico sphere nodes do not create UVs

It turns out you have to add the UV custom data layer manually before
calling the BMesh primitive operators, even if you pass `calc_uvs=true`.